@@ -19,6 +19,7 @@
  * cqlsh: Fix COPY FROM value quoting and null handling (CASSANDRA-5305)
  * Fix repair -pr for vnodes (CASSANDRA-5329)
  * Relax CL for auth queries for non-default users (CASSANDRA-5310)
+ * Fix AssertionError during repair (CASSANDRA-5245)
 Merged from 1.1:
  * fix logging of "Found table data in data directories" when only system tables
    are present (CASSANDRA-5289)
